--- a/demo/inspire.html
+++ b/demo/inspire.html
@@ -3,6 +3,12 @@
 	<head>
 		<title>My Hero</title>
 		<meta charset="UTF-8">
+		<style>
+			h2
+			{
+				color:red;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>Superman</h1>
