--- a/demo/amuse.html
+++ b/demo/amuse.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<h1>Internet Humor</h1>
+		<h1>Internet Humor!</h1>
         	<p>The internet is a great venue for humor.  This page contains some funny things that might make you laugh.</p>
         	<p>To see the HTML Code in Chrome, right-click the page and select "View Page Source" or press Ctrl+U.</p>
 
