--- a/demo/amuse.html
+++ b/demo/amuse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Template</title>
+		<title>Amuse</title>
 		<meta charset="UTF-8">
 	</head>
 	<body>
