--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Testing123
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <title>Homepage</title>
+    </head>
+    <body>
+      <h1 class="title">My Homepage</h1>
+      <img style="width: 50vw;" src="logo.png" alt="UNC Logo">
+      <p>
+        <a href="https://bacs200steven-sanchez.github.io/profile.html">My Profile</a><br>
+        <a href="inspire.html">My Hero</a><br>
+        <a href="amuse.html">My Amusement</a><br>
+      </p>
+    </body>
+</html>
