--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
       <title>Homepage</title>
     </head>
     <body>
-      <h1 class="title">My Homepage</h1>
-      <img style="width: 50vw;" src="logo.png" alt="UNC Logo">
-      <p>
-        <a href="https://bacs200steven-sanchez.github.io/profile.html">My Profile</a><br>
-        <a href="inspire.html">My Hero</a><br>
-        <a href="amuse.html">My Amusement</a><br>
-      </p>
+      <h1 class="title">My Website</h1>
+      <img src="logo.png" alt="UNC Logo">
+      <table>
+        <tr>
+          <th>Title</th>
+          <th>Description</th>
+        </tr>
+        <tr>
+          <td><a href="https://bacs200steven-sanchez.github.io/profile.html">My Profile</a></td>
+          <td>More info about myself and my interests</td>
+        </tr>
+        <tr>
+          <td><a href="inspire.html">My Hero</a></td>
+          <td>Who my hero is and why</td>
+        </tr>
+        <tr>
+          <td><a href="amuse.html">My Amusement</a></td>
+          <td>Page dedicated to funny stuff I've found on the internet</td>
+        </tr>
+      </table>
     </body>
 </html>
