--- a/demo/profile.html
+++ b/demo/profile.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Steven Sanchez</title>
 		<meta charset="UTF-8">
+		<link rel="icon" href="profile.png">
 	</head>
 	<body>
 		<h1>Steven Sanchez</h1>
