--- a/demo/index.html
+++ b/demo/index.html
@@ -7,11 +7,18 @@
 	</head>
 	<body>
 		<h1>BACS200 Homepage</h1>
+		<p>Maybe someday the Dollar &lpar;&dollar;&rpar; will be &gt; than the Euro&nbsp;&lpar;&euro;&rpar;&nbsp;&smile;</p>
 		<img src="unclogo.png" alt="UNC Logo">
 		<ul>
 			<li><a href="profile.html">My Profile</a></li>
 			<li><a href="inspire.html">My Hero</a></li>
-			<li><a href="amuse.html">Funny Stuff</a></li>
+			<li><a href="amuse.html">Funny Stuff</a>
+				<ul>
+					<li><a href="amuse.html#freshlaughs" target="_self">Fresh Laughs</a></li>
+					<li><a href="amuse.html#oldlaughs" target="_blank">Old Laughs</a></li>
+				</ul>
+			
+			</li>
 		</ul>
 
 	</body>
