--- a/demo/profile.html
+++ b/demo/profile.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>Steven Sanchez</h1>
-		<img src="https://bacs200steven-sanchez.github.io/demo/profile.png" alt="Pic of Steven Sanchez">
+		<img src="https://bacs200steven-sanchez.github.io/demo/images/profile.png" alt="Pic of Steven Sanchez">
 		<p>I teach BACS200 at MCB at UNC</p>
 		
 	</body>
