fix demo index image

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<h1>BACS200 Homepage</h1>
 		<p>Maybe someday the Dollar &lpar;&dollar;&rpar; will be &gt; than the Euro&nbsp;&lpar;&euro;&rpar;&nbsp;&smile;</p>
-		<img src="/images/unclogo.png" alt="UNC Logo">
+		<img src="images/unclogo.png" alt="UNC Logo">
 		<ul>
 			<li><a href="profile.html">My Profile</a></li>
 			<li><a href="inspire.html">My Hero</a></li>
