--- a/demo/inspire.html
+++ b/demo/inspire.html
@@ -17,5 +17,6 @@
 		<h2>What makes a hero?</h2>
 		<p>Superman is the best superhero.</p>
 		<p><a href="https://www.supermanhomepage.com/">Learn More ...</a></p>
+		<p><a href="index.html"><img src="images/button_homepage.png" alt="button back to homepage"></a></p>
 	</body>
 </html>
