--- a/demo/profile.html
+++ b/demo/profile.html
@@ -9,6 +9,6 @@
 		<h1>Steven Sanchez</h1>
 		<img src="https://bacs200steven-sanchez.github.io/demo/images/profile.png" alt="Pic of Steven Sanchez">
 		<p>I teach BACS200 at MCB at UNC</p>
-		
+		<p><a href="index.html"><img src="images/button_homepage.png" alt="button back to homepage"></a></p>
 	</body>
 </html>
