--- a/demo/template.html
+++ b/demo/template.html
@@ -11,5 +11,6 @@
 		<p>Body text</p>
 		<h2>Subheading</h2>
 		<p>Body text</p>
+		<p><a href="index.html"><img src="https://dabuttonfactory.com/button.png?t=Homepage&f=Open+Sans-Bold&ts=26&tc=fff&hp=28&vp=20&c=round&bgt=unicolored&bgc=666" alt="button back to homepage"></a></p>
 	</body>
 </html>
