--- a/test.html
+++ b/test.html
@@ -25,6 +25,11 @@
                     <td><a href="amuse.html">https://bacs200steven-sanchez.github.io/amuse.html</a></td>
                     <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbacs200steven-sanchez.github.io%2Famuse.html">VALIDATE</a></td>
                 </tr>
+                <tr>
+                    <th>Inspire</th>
+                    <td><a href="amuse.html">https://bacs200steven-sanchez.github.io/inspire.html</a></td>
+                    <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbacs200steven-sanchez.github.io%2Finspire.html">VALIDATE</a></td>
+                </tr>
             </tbody>
         </table>
     </body>
