--- a/superhero.html
+++ b/superhero.html
@@ -3,9 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Superheroes</title>
-        <link rel="stylesheet" href="css/main.css">
 
         <style>
+            h1
+            {
+                color: red;
+            }
+            h2
+            {
+                color: purple;
+            }
+            th
+            {
+                color: rgb(0, 0, 0);
+            }
             img
             {
                 height: 100px;
@@ -33,8 +44,8 @@
         <table>
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Alias</th>
+                    <th style="color: purple;">Name</th>
+                    <th style="color: purple;">Alias</th>
                     <th>Image</th>
                     <th>Superpowers</th>
                     <th>Weaknesses</th>
