--- a/inspire.html
+++ b/inspire.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>My Hero</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <h1>Martin Luther King, Jr.</h1>
