--- a/superhero.html
+++ b/superhero.html
@@ -3,19 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <title>Superheroes</title>
+        <link rel="stylesheet" href="css/main.css">
 
         <style>
-            h1
+            body
+            {
+                background-color: rgb(255, 255, 177);
+            }
+            h1, h2, h3
             {
                 color: red;
+            }
+            #superman
+            {
+                color: red;
+            }
+            .colhead
+            {
+                color:purple
             }
             h2
             {
                 color: purple;
-            }
-            th
-            {
-                color: rgb(0, 0, 0);
             }
             img
             {
@@ -25,6 +34,7 @@
             {
                 border: 2px solid black;
                 padding: 15px;
+                background-color: lightsalmon;
                 
             }
             table
@@ -36,6 +46,14 @@
                 background-color: gray;
                 font-size: 18px;
             }
+            li:nth-child(1)
+            {
+                color: darkgreen;
+            }
+            table ul
+            {
+                color: aqua;
+            }
         </style>
 
     </head>
@@ -44,11 +62,11 @@
         <table>
             <thead>
                 <tr>
-                    <th style="color: purple;">Name</th>
-                    <th style="color: purple;">Alias</th>
-                    <th>Image</th>
-                    <th>Superpowers</th>
-                    <th>Weaknesses</th>
+                    <th class="colhead">Name</th>
+                    <th class="colhead">Alias</th>
+                    <th class="colhead">Image</th>
+                    <th class="colhead">Superpowers</th>
+                    <th class="colhead">Weaknesses</th>
                 </tr>
             </thead>
             <tbody>
@@ -66,7 +84,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th>Superman</th>
+                    <th id="superman">Superman</th>
                     <td>Clark&nbsp;Kent</td>
                     <td><a href="images/superman.jpg"><img src="images/superman.jpg" alt="Superman Pic"></a></td>
                     <td>
@@ -84,5 +102,12 @@
                 </tr>
             </tbody>
         </table>
+        <p>Some other Superheroes:
+            <ul>
+                <li>Green Lantern</li>
+                <li>Wolverine</li>
+            </ul>        
+        </p>
+        
     </body>
 </html>
