--- a/demo/amuselist.html
+++ b/demo/amuselist.html
@@ -3,6 +3,20 @@
 	<head>
 		<title>Amuse</title>
 		<meta charset="UTF-8">
+		<style>
+			ol, ul
+			{
+				font-size: 14pt;
+			}
+			ol ul
+			{
+				color: green;
+			}
+			li > ul
+			{
+				color: red;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>Internet Humor!!!</h1>
@@ -13,6 +27,12 @@
 					<ul>
 						<li><h2>Top Laugh</h2></li>
 						<li>When I think of funny videos on the web, this is usually the first one that comes to mind.  Everyone's sense of humor is different, but maybe you'll find it hilarious as well!  To save you time, this link should skip straight to where the funniness starts in the video</li>
+						<li>
+							<ul>
+								<li>What color am I?</li>
+								<li>What about me?</li>
+							</ul>
+						</li>
 						<li><a href="https://youtu.be/4q5aprqreSk?t=81">Santa Fail</a></li>
 					</ul>
 				</li>
@@ -30,6 +50,9 @@
 				<a href="https://web.archive.org/web/20150709190953/http://www.chucknorrisfacts.com/chuck-norris-top-50-facts">Top 50 Chuck Norris Facts &amp; Jokes | Chuck Norris Facts</a>
 				-->
 			</ol>
+			<ul>
+				<li>What color am I?</li>
+			</ul>
 			
 		</body>
 </html>
