--- a/demo/amuselist.html
+++ b/demo/amuselist.html
@@ -4,6 +4,20 @@
 		<title>Amuse</title>
 		<meta charset="UTF-8">
 		<style>
+
+			@font-face
+			{
+				font-family: UNCtitle;
+				src: url(css/fonts/Arvo.ttf)
+			}
+
+
+			@font-face
+			{
+				font-family: UNCbody;
+				src: url(css/fonts/OpenSans.ttf)
+			}
+
 			ol, ul
 			{
 				font-size: 14pt;
@@ -15,6 +29,11 @@
 			li > ul
 			{
 				color: red;
+				font-family: UNCbody, Arial;
+			}
+			h2
+			{
+				font-family: UNCtitle, serif;
 			}
 		</style>
 	</head>
