--- a/application.html
+++ b/application.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Application</title>
-<<<<<<< HEAD
+        <link rel="stylesheet" href="css/application.css">
     </head>
     <body>
         <h1>Dragon Sweeper</h1>
@@ -40,22 +40,23 @@
                         <h3>Sidenote</h3>
                         <p>For peak efficiency, try to <strong>never level up unless your hearts are completely depleted</strong>. If you ever can't find a monster to spend your hearts on without dying, use them toward breaking a <img src="images/wall.png" alt="wall">. They take 3 hits before the crumble, revealing a single treasure. Better than nothing!</p>
                     </section>
+                    
                 </li>
                 <li>Repeat step 4 until you run out of revealed monsters or you don't have enough treasure to level up.
-                    <br>
+                    <br><br>
                     In this situation, you basically have 2 options:
                     <ul>
                         <li>Use a revealed <img src="images/scrollheart.png" alt="heart scroll"> to replenish your health (sort of like leveling up, but without progressing toward a new heart)</li>
                         <li>Venture into the unknown by clicking on an unrevealed space.
-                            <br>
+                            <br><br>
                             <strong>But wait! This is the step that can get you killed!</strong> You'll want to make an educated guess on what space would be safest before you dive in.
-                            <br>
+                            <br><br>
                             In order guess what monsters or treasure await in each unexplored space, we can look at the numbers shown in any surrounding blank spaces. This number is the total power level of threats surrounding that blank space. Take the example below:
-                            <br>
-                            <img src="images/example1.png" alt="Example 1">
-                            <br>
+                            <br><br>
+                            <img id="example1" src="images/example1.png" alt="Example 1">
+                            <br><br>
                             Notice how one of our blank spaces is displaying "1". This means of the 3 unrevealed spaces surrounding that space (including diagonals), the sum of their threat levels is only 1. If we only had 1 heart left at this point, we could confidently click on any of those 3 spaces and know that the worst that could happen is we end up spending our last heart fighting a <img src="images/rat.png" alt="rat">. One of the best things that could happen is we find a treasure chest! In fact, we know we can click on all 3 spaces with no risk of death.
-                            <br>
+                            <br><br>
                             Now let's look at the "9" space. 9 seems pretty scary if we're only sitting at 1 heart. But notice that this "9" is taking into account the <img src="images/skeleton.png" alt="3"> and <img src="images/demon.png" alt="4"> that were already revealed by the crystal ball at the start. That means that of the 2 remaining unexplored spaces around the "9", the sum of their threat levels is 2. In other words, if we were to click on one of those spacecs, it's guaranteed to have a threat level of either 0, 1, or 2. 2 would kill us, but 0 or 1 could lead us to more treasure!
                         </li>
                     </ul>
@@ -173,6 +174,20 @@
                         <td>Drops 3 treasure</td>
                     </tr>
                     <tr>
+                        <th><img src="images/ratking.png" alt="rat king"></th>
+                        <td>5</td>
+                        <td>1</td>
+                        <td></td>
+                        <td>Reveals the location of all <img src="images/rat.png" alt="rats"></td>
+                    </tr>
+                    <tr>
+                        <th><img src="images/slimewitch.png" alt="slime witch"></th>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>Exists only at the very edge of the map and never in a corner, surrounded by <img src="images/superslime.png" alt="super slimes"></td>
+                        <td>Reveals the location of all <img src="images/slime.png" alt="slimes"> and <img src="images/superslime.png" alt="super slimes"></td>
+                    </tr>
+                    <tr>
                         <th><img src="images/wall.png" alt="wall"></th>
                         <td>3*</td>
                         <td>6</td>
@@ -216,17 +231,5 @@
             </table>
             <div class="linkreturn"><a href="#">Return To Top</a></div>
         </section>
-=======
-        <link rel="stylesheet" href="css/application.css"
-    </head>
-    <body>
-        <h1>Dragonsweeper</h1>
-        <iframe style="width: 90vw; height: 45vw" src="dragonsweeper.html"></iframe>
-        <h2>Overview</h2>
-        <p>Dragonsweeper is an interation of Minesweeper, with some additional mechanics that involve algebra!</p>
-        <img src="images/dragon.png" alt="red dragon">
-        <h2>How to Play</h2>
-        <p>Click around and don't die.</p>
->>>>>>> 9deef4109f9c610c41a9e50491bf22396960c88e
     </body>
 </html>
