--- a/search.html
+++ b/search.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Google BACS200 Search</h1>
+        <h2>Web Dev Search Page</h2>
         <form action="https://www.google.com/search" method="GET" target="_blank">
             <fieldset id="toplevelset">
                 <div>
@@ -36,7 +37,7 @@
                         <label for="checkwindow">Open Links in New Window</label>
                     </div>
                     <div>
-                        <input type="checkbox" name="pws" value="0" id="checkpersonal">
+                        <input type="checkbox" name="pws" value="0" id="checkpersonal" checked>
                         <label for="checkpersonal">Exclude Personal Results</label>
                     </div>
                     <div>
