--- a/demo/resume/expnskills.html
+++ b/demo/resume/expnskills.html
@@ -3,18 +3,37 @@
 	<head>
 		<title>Resume - Steven Sanchez</title>
 		<meta charset="UTF-8">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<h1>Steven Sanchez</h1>
 		<nav>
 			<ul>
-				<li><a href="#contact">Contact Info</a></li>
-				<li><a href="#edu">Education</a></li>
+				<li><a href="index.html#contact">Contact Info</a></li>
+				<li><a href="index.html#edu">Education</a></li>
 				<li><a href="expnskills.html#exp">Experience</a></li>
 				<li><a href="expnskills.html#skills">Skills</a></li>
 			</ul>
 		</nav>
 		<section id="exp">
+			<h2>Professional Experience</h2>
+			<table>
+				<tr>
+					<th>Desktop Support Technician</th>
+					<td>University of Northern Colorado</td>
+					<td>2009-2015</td>
+				</tr>
+				<tr>
+					<th>System Administrator</th>
+					<td>University of Northern Colorado</td>
+					<td>2015-2019</td>
+				</tr>
+				<tr>
+					<th>Business Analyst</th>
+					<td>University of Northern Colorado</td>
+					<td>20019-Present</td>
+				</tr>
+			</table>
 
 		</section>
 		<section id="skills">
