--- a/demo/resume/index.html
+++ b/demo/resume/index.html
@@ -3,18 +3,20 @@
 	<head>
 		<title>Resume - Steven Sanchez</title>
 		<meta charset="UTF-8">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<h1>Steven Sanchez</h1>
 		<nav>
 			<ul>
-				<li><a href="#contact">Contact Info</a></li>
-				<li><a href="#edu">Education</a></li>
+				<li><a href="index.html#contact">Contact Info</a></li>
+				<li><a href="index.html#edu">Education</a></li>
 				<li><a href="expnskills.html#exp">Experience</a></li>
 				<li><a href="expnskills.html#skills">Skills</a></li>
 			</ul>
 		</nav>
 		<section id="contact">
+			<h2>Contact Info</h2>
 			<ul>
 				<li><a href="mailto:steven.sanchez@unco.edu?subject=I want to hire you">steven.sanchez@unco.edu</a></li>
 				<li><a href="https://bacs200steven-sanchez.github.io">https://bacs200steven-sanchez.github.io</a></li>
