--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       <h1 class="title">My Website</h1>
-      <img src="images/logo.png" alt="UNC Logo">
+      <img src="images/logo-min.png" alt="UNC Logo">
       <table>
         <tr>
           <th>Title</th>
