--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
       <meta charset="UTF-8">
       <title>Homepage</title>
       <link rel="stylesheet" href="css/main.css">
+      <style>
+        :root
+        {
+          font-size: 3.5vw;
+        }
+        img
+        {
+          width: 90vw;
+        }
+        h1
+        {
+          font-size: 7vw;
+        }
+      </style>
     </head>
     <body>
       <h1 class="title">My Website</h1>
