--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </head>
     <body>
       <h1 class="title">My Website</h1>
-      <img src="images/logo-min.png" alt="UNC Logo">
+      <a href="images/logo.png"><img src="images/logo-min.png" alt="UNC Logo"></a>
       <table>
         <tr>
           <th>Title</th>
