--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           font-size: 7vw;
         }
       </style>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
       <h1 class="title">My Website</h1>
