--- a/inspire.html
+++ b/inspire.html
@@ -3,15 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <title>My Hero</title>
+        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <h1>Martin Luther King, Jr.</h1>
-        <h2>Portrait</h2>
-        <img id="portrait"  src="https://hips.hearstapps.com/hmg-prod/images/martin-luther-king-jr-9365086-2-402.jpg" alt="MLK">
-        <h2>What makes a hero?</h2>
-        <p>A hero is someone that we look up to. Heroes embody what we truly value most. Therefore who we select as role models says a lot about who we are as people.</p>
-        <p>Over the last 100 years no one exemplifies these values for me more than Martin Luther King. He called on people to be accountable for the racial prejudices they carried. He demonstrated that violence is not the best way to create lasting change. And throughout his life he sacrificed everything to make the world better.</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-5">
+                    <h2>Portrait</h2>
+                    <img id="portrait"  src="https://hips.hearstapps.com/hmg-prod/images/martin-luther-king-jr-9365086-2-402.jpg" alt="MLK">
+                </div>
+                <div class="col-lg-7">
+                    <h2>What makes a hero?</h2>
+                    <p>A hero is someone that we look up to. Heroes embody what we truly value most. Therefore who we select as role models says a lot about who we are as people.</p>
+                    <p>Over the last 100 years no one exemplifies these values for me more than Martin Luther King. He called on people to be accountable for the racial prejudices they carried. He demonstrated that violence is not the best way to create lasting change. And throughout his life he sacrificed everything to make the world better.</p>
+                </div>
+            </div>
+        </div>
         <p><a href="https://www.biography.com/activist/martin-luther-king-jr">Learn More ...</a></p>
     </body>
 </html>
