--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </head>
     <body>
       <h1 class="title">My Website</h1>
-      <a href="images/logo.png"><img src="images/logo-min.png" alt="UNC Logo"></a>
+      <a href="images/logo.png"><img class="logo" src="images/logo-min.png" alt="UNC Logo"></a>
       <table>
         <tr>
           <th>Title</th>
